rework lpa-decisions and people-named-on-lpa to toggle headers and actions based on Lpa state

--- a/app/web/template/layout/attorney-summary.gohtml
+++ b/app/web/template/layout/attorney-summary.gohtml
@@ -2,7 +2,14 @@
     {{range $i, $a := .Attorneys}}
         {{ $attorneyNumber := inc $i }}
 
-        <h2 class="govuk-heading-m">{{ tr $.App "attorney" }} {{ $attorneyNumber }}</h2>
+        {{ $detailsLink := printf "%s?from=%s&id=%s" $.DetailsPath $.App.Page .ID }}
+        {{ $addressLink := printf "%s?from=%s&id=%s" $.AddressPath $.App.Page .ID }}
+        {{ $removeLink := printf "%s?from=%s&id=%s" $.RemovePath $.App.Page .ID }}
+
+        {{ if $.WithHeaders }}
+            <h2 class="govuk-heading-m">{{ tr $.App "attorney" }} {{ $attorneyNumber }}</h2>
+        {{ end }}
+
         <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row" id="name-{{ $attorneyNumber }}">
                 <dt class="govuk-summary-list__key">
@@ -11,11 +18,13 @@
                 <dd class="govuk-summary-list__value">
                     {{ $a.FirstNames }} {{ $a.LastName }}
                 </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $a.ID }}&from={{ $.App.Page }}#f-first-names">
-                        {{ trFormatHtml $.App "changeNameLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
-                    </a>
-                </dd>
+                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                    <dd class="govuk-summary-list__actions">
+                        <a class="govuk-link" href="{{ link $.App $detailsLink }}#f-first-names">
+                            {{ trFormatHtml $.App "changeNameLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
+                        </a>
+                    </dd>
+                {{ end }}
             </div>
             <div class="govuk-summary-list__row" id="date-of-birth-{{ $attorneyNumber }}">
                 <dt class="govuk-summary-list__key">
@@ -24,11 +33,13 @@
                 <dd class="govuk-summary-list__value">
                     {{ formatDate $a.DateOfBirth }}
                 </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $a.ID }}&from={{ $.App.Page }}#f-date-of-birth">
-                        {{ trFormatHtml $.App "changeDOBLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
-                    </a>
-                </dd>
+                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                    <dd class="govuk-summary-list__actions">
+                        <a class="govuk-link" href="{{ link $.App $detailsLink }}#f-date-of-birth">
+                            {{ trFormatHtml $.App "changeDOBLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
+                        </a>
+                    </dd>
+                {{ end }}
             </div>
             <div class="govuk-summary-list__row" id="email-{{ $attorneyNumber }}">
                 <dt class="govuk-summary-list__key ">
@@ -37,11 +48,13 @@
                 <dd class="govuk-summary-list__value">
                     {{ $a.Email }}
                 </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $a.ID }}&from={{ $.App.Page }}#f-email">
-                        {{ trFormatHtml $.App "changeEmailLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
-                    </a>
-                </dd>
+                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                    <dd class="govuk-summary-list__actions">
+                        <a class="govuk-link" href="{{ link $.App $detailsLink }}#f-email">
+                            {{ trFormatHtml $.App "changeEmailLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
+                        </a>
+                    </dd>
+                {{ end }}
             </div>
             <div class="govuk-summary-list__row" id="address-{{ $attorneyNumber }}">
                 <dt class="govuk-summary-list__key">
@@ -54,23 +67,27 @@
                     {{ if $a.Address.TownOrCity }}{{ $a.Address.TownOrCity }}<br>{{end}}
                     {{ $a.Address.Postcode }}
                 </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.AddressPath }}?id={{ $a.ID }}&from={{ $.App.Page }}#f-address-line-1">
-                        {{ trFormatHtml $.App "changeAddressLink" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
-                    </a>
-                </dd>
+                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                    <dd class="govuk-summary-list__actions">
+                        <a class="govuk-link" href="{{ link $.App $addressLink }}#f-address-line-1">
+                            {{ trFormatHtml $.App "changeAddressLink" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
+                        </a>
+                    </dd>
+                {{ end }}
             </div>
         </dl>
 
-        <div class="govuk-grid-row" id="remove-attorney-{{ $attorneyNumber }}">
-            <div class="govuk-grid-column-full">
-                <div class="app-float-right">
-                    <a class="govuk-button govuk-button--secondary" href="{{ link $.App $.RemovePath }}?id={{ .ID }}" data-module="govuk-button">
-                        {{ trFormat $.App "removeAttorneyButtonLink" "FirstNames" $a.FirstNames "LastName" $a.LastName  }}
-                    </a>
+        {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+            <div class="govuk-grid-row" id="remove-attorney-{{ $attorneyNumber }}">
+                <div class="govuk-grid-column-full">
+                    <div class="app-float-right">
+                        <a class="govuk-button govuk-button--secondary" href="{{ link $.App $removeLink }}" data-module="govuk-button">
+                            {{ trFormat $.App "removeAttorneyButtonLink" "FirstNames" $a.FirstNames "LastName" $a.LastName  }}
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
+        {{ end }}
     {{ end }}
 
 {{ end }}
