--- a/app/web/template/layout/people-to-notify-summary.gohtml
+++ b/app/web/template/layout/people-to-notify-summary.gohtml
@@ -1,8 +1,15 @@
 {{ define "people-to-notify-summary" }}
-    {{range $i, $p := .PeopleToNotify}}
+    {{range $i, $p := .Lpa.PeopleToNotify}}
         {{ $personNumber := inc $i }}
 
-        <h2 class="govuk-heading-m">Person {{ $personNumber }}</h2>
+        {{ $detailsLink := printf "%s?from=%s&id=%s" $.App.Paths.ChoosePeopleToNotify $.App.Page .ID }}
+        {{ $addressLink := printf "%s?from=%s&id=%s" $.App.Paths.ChoosePeopleToNotifyAddress $.App.Page .ID }}
+        {{ $removeLink := printf "%s?from=%s&id=%s" $.App.Paths.RemovePersonToNotify $.App.Page .ID }}
+
+        {{ if $.WithHeaders}}
+            <h2 class="govuk-heading-m">Person {{ $personNumber }}</h2>
+        {{ end }}
+
         <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row" id="name-{{ $personNumber }}">
                 <dt class="govuk-summary-list__key">
@@ -11,11 +18,13 @@
                 <dd class="govuk-summary-list__value">
                     {{ $p.FirstNames }} {{ $p.LastName }}
                 </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $p.ID }}&from={{ $.App.Page }}#f-first-names">
-                        {{ trFormatHtml $.App "changeNameLinkText" "FirstNames" $p.FirstNames "LastName" $p.LastName }}
-                    </a>
-                </dd>
+                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                    <dd class="govuk-summary-list__actions">
+                        <a class="govuk-link" href="{{ link $.App $detailsLink }}#f-first-names">
+                            {{ trFormatHtml $.App "changeNameLinkText" "FirstNames" $p.FirstNames "LastName" $p.LastName }}
+                        </a>
+                    </dd>
+                {{ end }}
             </div>
             <div class="govuk-summary-list__row" id="email-{{ $personNumber }}">
                 <dt class="govuk-summary-list__key ">
@@ -24,11 +33,13 @@
                 <dd class="govuk-summary-list__value">
                     {{ $p.Email }}
                 </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $p.ID }}&from={{ $.App.Page }}#f-email">
-                        {{ trFormatHtml $.App "changeEmailLinkText" "FirstNames" $p.FirstNames "LastName" $p.LastName }}
-                    </a>
-                </dd>
+                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                    <dd class="govuk-summary-list__actions">
+                        <a class="govuk-link" href="{{ link $.App $detailsLink }}#f-email">
+                            {{ trFormatHtml $.App "changeEmailLinkText" "FirstNames" $p.FirstNames "LastName" $p.LastName }}
+                        </a>
+                    </dd>
+                {{ end }}
             </div>
             <div class="govuk-summary-list__row" id="address-{{ $personNumber }}">
                 <dt class="govuk-summary-list__key">
@@ -41,22 +52,26 @@
                     {{ if $p.Address.TownOrCity }}{{ $p.Address.TownOrCity }}<br>{{end}}
                     {{ $p.Address.Postcode }}
                 </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.AddressPath }}?id={{ $p.ID }}&from={{ $.App.Page }}#f-address-line-1">
-                        {{ trFormatHtml $.App "changeAddressLink" "FirstNames" $p.FirstNames "LastName" $p.LastName }}
-                    </a>
-                </dd>
+                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                    <dd class="govuk-summary-list__actions">
+                        <a class="govuk-link" href="{{ link $.App $.AddressPath }}#f-address-line-1">
+                            {{ trFormatHtml $.App "changeAddressLink" "FirstNames" $p.FirstNames "LastName" $p.LastName }}
+                        </a>
+                    </dd>
+                {{ end }}
             </div>
         </dl>
 
-        <div class="govuk-grid-row" id="remove-person-to-notify-{{ $personNumber }}">
-            <div class="govuk-grid-column-full">
-                <div class="app-float-right">
-                    <a class="govuk-button govuk-button--secondary" href="{{ link $.App $.RemovePath }}?id={{ $p.ID }}" data-module="govuk-button">
-                        {{ trFormatHtml $.App "removePersonToNotifyButtonLink" "FirstNames" $p.FirstNames "LastName" $p.LastName }}
-                    </a>
+        {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+            <div class="govuk-grid-row" id="remove-person-to-notify-{{ $personNumber }}">
+                <div class="govuk-grid-column-full">
+                    <div class="app-float-right">
+                        <a class="govuk-button govuk-button--secondary" href="{{ link $.App $removeLink }}" data-module="govuk-button">
+                            {{ trFormatHtml $.App "removePersonToNotifyButtonLink" "FirstNames" $p.FirstNames "LastName" $p.LastName }}
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
+        {{ end }}
     {{ end }}
 {{ end }}
