translatify hardcoded content on progress page

--- a/app/web/template/do_you_want_to_notify_people.gohtml
+++ b/app/web/template/do_you_want_to_notify_people.gohtml
@@ -10,7 +10,7 @@
 
                 {{ trHtml .App "wantPeopleToNotifyContent" }}
 
-                {{ $lpaType := tr .App .Lpa.LpaLegalTermTransKey }}
+                {{ $lpaType := tr .App .Lpa.TypeLegalTermTransKey }}
                 {{ $howWorkTogether := tr .App .HowWorkTogether }}
                 {{ trFormatHtml .App "weWillOnlyTellThemBullets" "LpaType" $lpaType "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames "HowAttorneysWorkTogether" $howWorkTogether}}
 
