--- a/app/web/template/lpa_progress.gohtml
+++ b/app/web/template/lpa_progress.gohtml
@@ -3,14 +3,15 @@
 {{ define "main" }}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-xl">My finance and affairs lasting power of attorney</h1>
+            {{ $lpaType := tr .App .Lpa.TypeLegalTermTransKey }}
+            <h1 class="govuk-heading-xl">{{ trFormat .App "myLpa" "LpaType" $lpaType }}</h1>
             <div class="govuk-body">
-                Application number: 10238756382
+                <span><strong>{{ tr .App "applicationNumber" }}:</strong> {{ .Lpa.ID }}</span>
             </div>
 
             {{ template "progress-bar" (progressBar .App .Lpa) }}
 
-            <a class="govuk-button" href="{{ link .App .App.Paths.Dashboard }}">{{ tr $.App "backToDashboard" }}</a>
+            <a class="govuk-button" href="{{ link .App .App.Paths.Dashboard }}">{{ tr .App "backToDashboard" }}</a>
 
             {{ template "lpa-decisions" . }}
             {{ template "people-named-on-lpa" (peopleNamedOnLpa .App .Lpa false) }}
