--- a/app/web/template/choose_attorneys_summary.gohtml
+++ b/app/web/template/choose_attorneys_summary.gohtml
@@ -5,7 +5,8 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">{{ trCount .App "attorneysAdded" (len .Lpa.Attorneys) }}</h1>
 
-        {{ template "attorney-summary" (listAttorneys .Lpa.Attorneys .App .App.Paths.ChooseAttorneys .App.Paths.ChooseAttorneysAddress .App.Paths.RemoveAttorney) }}
+        {{ $showHeaders := not (eq .Lpa.Tasks.CheckYourLpa.String "completed") }}
+        {{ template "attorney-summary" (listAttorneys .Lpa.Attorneys .App "attorney" $showHeaders .Lpa ) }}
 
         <form novalidate method="post">
             <div class="govuk-form-group">
