--- a/app/web/template/layout/people-named-on-lpa.gohtml
+++ b/app/web/template/layout/people-named-on-lpa.gohtml
@@ -15,14 +15,14 @@
         {{ tr .App "attorneys" }}
     </h3>
 
-    {{ template "attorney-summary" (listAttorneys .Lpa.Attorneys .App .App.Paths.ChooseAttorneys .App.Paths.ChooseAttorneysAddress .App.Paths.RemoveAttorney .ShowPeopleHeaders .Lpa) }}
+    {{ template "attorney-summary" (listAttorneys .Lpa.Attorneys .App "attorney" .ShowPeopleHeaders .Lpa) }}
 
     {{ if gt (len .Lpa.ReplacementAttorneys) 0 }}
         <h3 class="govuk-heading-m govuk-!-margin-top-9 govuk-!-margin-bottom-2">
             {{ tr .App "replacementAttorneys" }}
         </h3>
 
-        {{ template "attorney-summary" (listAttorneys .Lpa.ReplacementAttorneys .App .App.Paths.ChooseReplacementAttorneys .App.Paths.ChooseReplacementAttorneysAddress .App.Paths.RemoveReplacementAttorney .ShowPeopleHeaders .Lpa) }}
+        {{ template "attorney-summary" (listAttorneys .Lpa.ReplacementAttorneys .App "replacement" .ShowPeopleHeaders .Lpa) }}
     {{ end }}
 
     {{ if gt (len .Lpa.PeopleToNotify) 0  }}
