--- a/app/web/template/identity_with_one_login_callback.gohtml
+++ b/app/web/template/identity_with_one_login_callback.gohtml
@@ -13,7 +13,7 @@
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              CoreIdentityJWT
+              Full Name
             </dt>
             <dd class="govuk-summary-list__value">
               {{ .FullName }}
