fix progress ids and add a11y checks

--- a/app/web/template/lpa_progress.gohtml
+++ b/app/web/template/lpa_progress.gohtml
@@ -13,6 +13,8 @@
 
             <a class="govuk-button" href="{{ link .App .App.Paths.Dashboard }}">{{ tr .App "backToDashboard" }}</a>
 
+            <h2 class="govuk-heading-m">{{ tr .App "lpaDecisions"}}</h2>
+
             {{ template "lpa-decisions" . }}
             {{ template "people-named-on-lpa" (peopleNamedOnLpa .App .Lpa false) }}
         </div>
